--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/SW49GO/React-modal.git"
+    "url": "https://github.com/SW49GO/React-Table.git"
   },
   "keywords": [
     "table",
@@ -18,10 +18,13 @@
     "sw49go"
   ],
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "prop-types": "^15.8.1",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,21 +52,27 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "prop-types": "^15.8.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-scripts": "5.0.1"
   },
   "peerDependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "prop-types": "^15.8.1",
     "react-icons": "^5.0.1"
   }
 }
